# lw-task

./: .gitignore  Dockerfile  README.md  llm-api.yaml  pyproject.toml  ruff.toml  shoby_brand_info.txt
eval/: eval_prompt.txt  promptfooconfig.yaml
lw_task/: entrypoint.py  prompt.py  utils.py
scripts/: dynamodb_setup.py  modal_deployment.py
